# library

./: .env.template  .pre-commit-config.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_18_1438-4a01ece5f63a_initial.py  2025_05_18_1441-72c748f3e1a0_edit_books_table.py
app/: app_setup.py  config.py  main.py
app/api/v1/: __init__.py  client.py  librarian.py
app/database/: models.py
