[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Dolgov Denis <dolgovdenis35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.12"}
alembic = "^1.15.2"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.41"
loguru = "^0.7.3"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
